Header and body fixed aside from overflow issues with dl/dt. Footer code is commented out as there are many issues to be fixed

--- a/style.css
+++ b/style.css
@@ -69,20 +69,17 @@ img {
 .subHeader h1 {
     font-family: Open Sans;
     padding-left: 2%;
-    border: 1px solid black;
 }
 
 .subHeader p {
     font-family: Open Sans;
     padding-left: 2%;
-    border: 1px solid black;
 }
 
 .dogRow {
-    border: 2px solid purple;
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
     justify-content: center;
 }
@@ -90,19 +87,18 @@ img {
 /* DO NOT MODIFY ABOVE code */
 
 .dogTile {
-    border: 1px dashed fuchsia;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
     align-items: flex-start;
     width: 33vw;
     height: 33vw;
-    padding: 0.5%;
+    padding: 2%;
 }
 
 .dogTile img {
-    width: inherit;
-    height: inherit;
+    width: 100%;
+    height: 100%;
     object-fit: cover;
 }
 
@@ -135,11 +131,30 @@ img {
     margin-right: 1vh;
 }
 
-.footer {
+/* .footer {
+    border: 1px dashed fuchsia;
     position: absolute;
-    bottom: 0%;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    flex-grow: 0;
+    flex-shrink: 0;
+    bottom: 0;
+    align-items: center;
+    justify-items: center;
     width: 100vw;
     height: 10vh;
-    border: 2px solid red;
-    
+    padding: 0.5%;
+
+} */
+
+/* .footer div {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-self: center;
 }
+
+.footer h1 {
+    display: flex;
+    align-self: stretch;
+} */
